test/reassignDependentTypeParameter.hql
def main(){
	n := 4;
	x := 0: int[n]; // error
	n += 2;
}
